# agent-scope

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  VISION.md  pyproject.toml
agentscope/adapters/: shims.py
agentscope/cli/: main.py
agentscope/core/: __init__.py  emitter.py  models.py  redaction.py  store.py
tests/: conftest.py  test_adapters.py  test_emitter.py  test_integration.py  test_models.py  test_redaction.py  test_store.py
